--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <img src="image/1.png" height="300px" class="section"/>
   <img src="image/2.png" height="300px" class="section"/>
   <div style="background: white;" class="section-black">
-    <model-viewer src="model/merch_design_one.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:600px; width:90vw;">
+    <model-viewer src="model/merch_design_one.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:90vh; width:90vw;">
       </model-viewer>
   </div>
   <div style="background: white;" class="section-black">
-    <model-viewer src="model/merch_design_two.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:600px; width:90vw;">
+    <model-viewer src="model/merch_design_two.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:90vh; width:90vw;">
   </model-viewer>
   </div>
   <div class="section">
