--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 
   <img src="image/1.png" height="300px" class="section"/>
   <img src="image/2.png" height="300px" class="section"/>
-  <div style="background: white;" class="section-black">
+<!--   <div style="background: white;" class="section-black">
     <model-viewer src="model/merch_design_one.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:90vh; width:90vw;">
       </model-viewer>
+  </div> -->
+  <div class="section">
+    <a href="./modelone.html"></a>
   </div>
-  <div style="background: white;" class="section-black">
+<!--   <div style="background: white;" class="section-black">
     <model-viewer src="model/merch_design_two.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:90vh; width:90vw;">
-  </model-viewer>
+  </model-viewer> -->
   </div>
   <div class="section">
     <p id="gear-text">JFSS ENGINEERING</p>
