--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
       </model-viewer>
   </div> -->
   <div class="section">
-    <a href="./modelone.html"></a>
+    <a href="./modelone.html" target="_blank">Click here to checkout model 1</a>
+  </div>
+  <div class="section">
+    <a href="./modeltwo.html" target="_blank">Click here to checkout model 2</a>
   </div>
 <!--   <div style="background: white;" class="section-black">
     <model-viewer src="model/merch_design_two.glb" alt="oc" auto-rotate camera-controls ar ios-src="model/zscolor.usdz"  oncontextmenu="return false;" style="height:90vh; width:90vw;">
-  </model-viewer> -->
-  </div>
+  </model-viewer>
+  </div> -->
   <div class="section">
     <p id="gear-text">JFSS ENGINEERING</p>
     <br/>
     <p>More Fonts: 
-      <a href="https://www.fontspace.com/category/gears" style="color: lightblue;">https://www.fontspace.com/category/gears</a>, 
-      <a href="https://www.fontspace.com/category/robotic" style="color: lightblue;">https://www.fontspace.com/category/robotic</a></p>
+      <a href="https://www.fontspace.com/category/gears">https://www.fontspace.com/category/gears</a>, 
+      <a href="https://www.fontspace.com/category/robotic">https://www.fontspace.com/category/robotic</a></p>
   </div>
   
   <div class="section" style="background: #144090;">
@@ -43,7 +46,7 @@
   </div>
 
   <div class="section">
-    <a href="https://www.canva.com/design/DAFx6tV9an0/Z2s6AiExwY0E9sKVdUvLbQ/edit?utm_content=DAFx6tV9an0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" style="color: lightblue">Canva Link</a>
+    <a href="https://www.canva.com/design/DAFx6tV9an0/Z2s6AiExwY0E9sKVdUvLbQ/edit?utm_content=DAFx6tV9an0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Canva Link</a>
     <p style="color: white">
       Random other ideas:      
     </p>
